src/paqueton/y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : ID $$1 cuerpo
   3       | cuerpo_error

   4  cuerpo_error : BEGIN sentencias ';' END
   5               | BEGIN sentencia END
   6               | BEGIN sentencias ';'

   7  cuerpo : BEGIN sentencias ';' END
   8         | BEGIN sentencia END
   9         | BEGIN sentencias ';'
  10         | sentencias ';' END
  11         | sentencias ';'

  12  sentencias : sentencias ';' sentencia
  13             | sentencia
  14             | error ';'
  15             | sentencias sentencia

  16  sentencia : sentec_declar
  17            | sentec_eject

  18  sentec_declar : declaracion_var
  19                | declaracion_fun
  20                | TAG
  21                | declar_tipo_trip

  22  sentec_eject : asignacion
  23               | invoc_fun
  24               | seleccion
  25               | sald_mensaj
  26               | for
  27               | goto

  28  condicion : '(' condicion_2 ')'
  29            | condicion_2
  30            | '(' condicion_2
  31            | condicion_2 ')'

  32  condicion_2 : expresion_matematica comparador expresion_matematica
  33              | '(' patron_izq ')' comparador '(' patron_der ')'
  34              | '(' patron_izq comparador patron_der ')'
  35              | '(' patron_izq ')' comparador patron_der ')'
  36              | '(' patron_izq comparador '(' patron_der ')'
  37              | '(' patron_izq ')' error '(' patron_der ')'
  38              | expresion_matematica error expresion_matematica

  39  patron_izq : lista_patron_izq ',' expresion_matematica

  40  lista_patron_izq : lista_patron_izq ',' expresion_matematica
  41                   | expresion_matematica

  42  patron_der : lista_patron_der ',' expresion_matematica

  43  lista_patron_der : lista_patron_der ',' expresion_matematica
  44                   | expresion_matematica

  45  seleccion : IF condicion_punto_control THEN cuerpo_control sinelse_punto_control
  46            | IF condicion_punto_control THEN cuerpo_control else_punto_control cuerpo_control endif_punto_control
  47            | IF condicion_punto_control THEN cuerpo_control
  48            | IF condicion_punto_control THEN else_punto_control
  49            | IF condicion_punto_control THEN sinelse_punto_control
  50            | IF condicion_punto_control THEN cuerpo_control else_punto_control endif_punto_control
  51            | IF condicion_punto_control THEN else_punto_control endif_punto_control

  52  sinelse_punto_control : END_IF

  53  condicion_punto_control : condicion

  54  else_punto_control : ELSE

  55  endif_punto_control : END_IF

  56  comparador : MASI
  57             | MENOSI
  58             | DIST
  59             | '='
  60             | '<'
  61             | '>'

  62  cuerpo_control : BEGIN multip_cuerp_fun ';' END
  63                 | sentec_eject ';'
  64                 | BEGIN ';' END
  65                 | BEGIN END
  66                 | BEGIN multip_cuerp_fun END

  67  cuerpo_iteracion : BEGIN multip_cuerp_fun ';' END
  68                   | sentec_eject ';'
  69                   | BEGIN ';' END
  70                   | BEGIN END
  71                   | BEGIN multip_cuerp_fun END

  72  multip_cuerp_fun : multip_cuerp_fun ';' sentec_eject
  73                   | sentec_eject
  74                   | multip_cuerp_fun sentec_eject

  75  declaracion_var : tipo lista_variables

  76  $$2 :

  77  declaracion_var : ID $$2 lista_variables

  78  lista_variables : lista_variables ',' ID
  79                  | ID
  80                  | lista_variables error ID

  81  tipo : DOUBLE
  82       | ULONGINT

  83  asignacion : triple ASIGN expresion_matematica
  84             | ID ASIGN expresion_matematica

  85  expresion_matematica : expresion_matematica '+' termino
  86                       | expresion_matematica '-' termino
  87                       | termino
  88                       | '+' termino
  89                       | expresion_matematica '+' error ')'
  90                       | expresion_matematica '+' error ';'
  91                       | expresion_matematica '-' error ')'
  92                       | expresion_matematica '-' error ';'

  93  termino : termino '*' factor
  94          | termino '/' factor
  95          | factor
  96          | '*' factor
  97          | '/' factor
  98          | termino '/' error ')'
  99          | termino '*' error ')'
 100          | termino '*' error ';'
 101          | termino '/' error ';'

 102  factor : ID
 103         | constante
 104         | invoc_fun
 105         | triple

 106  constante : CTE
 107            | '-' CTE

 108  triple : ID '{' expresion_matematica '}'

 109  $$3 :

 110  $$4 :

 111  declaracion_fun : tipo_fun FUN ID '(' $$3 lista_parametro ')' $$4 cuerpo_funcion_p

 112  $$5 :

 113  declaracion_fun : tipo_fun FUN '(' lista_parametro ')' $$5 cuerpo_funcion_p

 114  $$6 :

 115  declaracion_fun : tipo_fun FUN ID '(' ')' $$6 cuerpo_funcion_p

 116  tipo_fun : tipo
 117           | ID

 118  lista_parametro : lista_parametro ',' parametro
 119                  | parametro

 120  parametro : tipo ID
 121            | ID ID
 122            | tipo
 123            | ID

 124  cuerpo_funcion_p : BEGIN bloques_funcion ';' END

 125  bloques_funcion : bloques_funcion ';' bloque_funcion
 126                  | bloque_funcion
 127                  | bloques_funcion bloque_funcion

 128  bloque_funcion : retorno
 129                 | sentencia

 130  retorno : RET '(' expresion_matematica ')'

 131  $$7 :

 132  invoc_fun : ID '(' $$7 lista_parametro_real ')'
 133            | ID '(' ')'

 134  lista_parametro_real : lista_parametro_real ',' param_real
 135                       | param_real

 136  param_real : expresion_matematica
 137             | tipo ID

 138  sald_mensaj : OUTF '(' mensaje ')'
 139              | OUTF '(' ')'
 140              | OUTF '(' error ')'

 141  mensaje : expresion_matematica
 142          | CADMUL

 143  for : FOR '(' asignacion_for ';' condicion_for ';' foravanc CTE ')' cuerpo_iteracion
 144      | FOR '(' asignacion_for ';' condicion_for foravanc '-' CTE ')' cuerpo_iteracion
 145      | FOR '(' asignacion_for ';' condicion_for foravanc CTE ')' cuerpo_iteracion
 146      | FOR '(' asignacion_for condicion_for ';' foravanc CTE ')' cuerpo_iteracion
 147      | FOR '(' asignacion_for condicion_for foravanc CTE ')' cuerpo_iteracion
 148      | FOR '(' asignacion_for ';' condicion_for ';' CTE ')' cuerpo_iteracion
 149      | FOR '(' asignacion_for ';' condicion_for ';' foravanc ')' cuerpo_iteracion
 150      | FOR '(' asignacion_for ';' condicion_for CTE ')' cuerpo_iteracion
 151      | FOR '(' asignacion_for ';' condicion_for foravanc ')' cuerpo_iteracion
 152      | FOR '(' asignacion_for ';' condicion_for ';' ')' cuerpo_iteracion

 153  condicion_for : condicion

 154  asignacion_for : ID ASIGN CTE

 155  foravanc : UP
 156           | DOWN

 157  goto : GOTO TAG
 158       | GOTO error ';'

 159  declar_tipo_trip : TYPEDEF TRIPLE '<' tipo '>' ID
 160                   | TYPEDEF TRIPLE tipo '>' ID
 161                   | TYPEDEF TRIPLE '<' tipo ID
 162                   | TYPEDEF TRIPLE tipo ID
 163                   | TYPEDEF '<' tipo '>' ID
 164                   | TYPEDEF TRIPLE '<' tipo '>' error ';'

state 0
	$accept : . prog $end  (0)

	ID  shift 1
	BEGIN  shift 2
	.  error

	prog  goto 3
	cuerpo_error  goto 4


state 1
	prog : ID . $$1 cuerpo  (2)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 5


state 2
	cuerpo_error : BEGIN . sentencias ';' END  (4)
	cuerpo_error : BEGIN . sentencia END  (5)
	cuerpo_error : BEGIN . sentencias ';'  (6)

	error  shift 6
	ID  shift 7
	GOTO  shift 8
	FOR  shift 9
	ULONGINT  shift 10
	DOUBLE  shift 11
	IF  shift 12
	OUTF  shift 13
	TYPEDEF  shift 14
	TAG  shift 15
	.  error

	sentencias  goto 16
	sentencia  goto 17
	sentec_declar  goto 18
	sentec_eject  goto 19
	declaracion_var  goto 20
	declaracion_fun  goto 21
	declar_tipo_trip  goto 22
	asignacion  goto 23
	invoc_fun  goto 24
	seleccion  goto 25
	sald_mensaj  goto 26
	for  goto 27
	goto  goto 28
	tipo  goto 29
	triple  goto 30
	tipo_fun  goto 31


state 3
	$accept : prog . $end  (0)

	$end  accept


state 4
	prog : cuerpo_error .  (3)

	.  reduce 3


state 5
	prog : ID $$1 . cuerpo  (2)

	error  shift 6
	ID  shift 7
	GOTO  shift 8
	FOR  shift 9
	ULONGINT  shift 10
	DOUBLE  shift 11
	IF  shift 12
	BEGIN  shift 32
	OUTF  shift 13
	TYPEDEF  shift 14
	TAG  shift 15
	.  error

	cuerpo  goto 33
	sentencias  goto 34
	sentencia  goto 35
	sentec_declar  goto 18
	sentec_eject  goto 19
	declaracion_var  goto 20
	declaracion_fun  goto 21
	declar_tipo_trip  goto 22
	asignacion  goto 23
	invoc_fun  goto 24
	seleccion  goto 25
	sald_mensaj  goto 26
	for  goto 27
	goto  goto 28
	tipo  goto 29
	triple  goto 30
	tipo_fun  goto 31


state 6
	sentencias : error . ';'  (14)

	';'  shift 36
	.  error


state 7
	declaracion_var : ID . $$2 lista_variables  (77)
	asignacion : ID . ASIGN expresion_matematica  (84)
	triple : ID . '{' expresion_matematica '}'  (108)
	tipo_fun : ID .  (117)
	invoc_fun : ID . '(' $$7 lista_parametro_real ')'  (132)
	invoc_fun : ID . '(' ')'  (133)
	$$2 : .  (76)

	ASIGN  shift 37
	'('  shift 38
	'{'  shift 39
	ID  reduce 76
	FUN  reduce 117

	$$2  goto 40


state 8
	goto : GOTO . TAG  (157)
	goto : GOTO . error ';'  (158)

	error  shift 41
	TAG  shift 42
	.  error


state 9
	for : FOR . '(' asignacion_for ';' condicion_for ';' foravanc CTE ')' cuerpo_iteracion  (143)
	for : FOR . '(' asignacion_for ';' condicion_for foravanc '-' CTE ')' cuerpo_iteracion  (144)
	for : FOR . '(' asignacion_for ';' condicion_for foravanc CTE ')' cuerpo_iteracion  (145)
	for : FOR . '(' asignacion_for condicion_for ';' foravanc CTE ')' cuerpo_iteracion  (146)
	for : FOR . '(' asignacion_for condicion_for foravanc CTE ')' cuerpo_iteracion  (147)
	for : FOR . '(' asignacion_for ';' condicion_for ';' CTE ')' cuerpo_iteracion  (148)
	for : FOR . '(' asignacion_for ';' condicion_for ';' foravanc ')' cuerpo_iteracion  (149)
	for : FOR . '(' asignacion_for ';' condicion_for CTE ')' cuerpo_iteracion  (150)
	for : FOR . '(' asignacion_for ';' condicion_for foravanc ')' cuerpo_iteracion  (151)
	for : FOR . '(' asignacion_for ';' condicion_for ';' ')' cuerpo_iteracion  (152)

	'('  shift 43
	.  error


state 10
	tipo : ULONGINT .  (82)

	.  reduce 82


state 11
	tipo : DOUBLE .  (81)

	.  reduce 81


state 12
	seleccion : IF . condicion_punto_control THEN cuerpo_control sinelse_punto_control  (45)
	seleccion : IF . condicion_punto_control THEN cuerpo_control else_punto_control cuerpo_control endif_punto_control  (46)
	seleccion : IF . condicion_punto_control THEN cuerpo_control  (47)
	seleccion : IF . condicion_punto_control THEN else_punto_control  (48)
	seleccion : IF . condicion_punto_control THEN sinelse_punto_control  (49)
	seleccion : IF . condicion_punto_control THEN cuerpo_control else_punto_control endif_punto_control  (50)
	seleccion : IF . condicion_punto_control THEN else_punto_control endif_punto_control  (51)

	ID  shift 44
	CTE  shift 45
	'('  shift 46
	'+'  shift 47
	'-'  shift 48
	'*'  shift 49
	'/'  shift 50
	.  error

	invoc_fun  goto 51
	condicion  goto 52
	condicion_2  goto 53
	expresion_matematica  goto 54
	condicion_punto_control  goto 55
	triple  goto 56
	termino  goto 57
	factor  goto 58
	constante  goto 59


state 13
	sald_mensaj : OUTF . '(' mensaje ')'  (138)
	sald_mensaj : OUTF . '(' ')'  (139)
	sald_mensaj : OUTF . '(' error ')'  (140)

	'('  shift 60
	.  error


state 14
	declar_tipo_trip : TYPEDEF . TRIPLE '<' tipo '>' ID  (159)
	declar_tipo_trip : TYPEDEF . TRIPLE tipo '>' ID  (160)
	declar_tipo_trip : TYPEDEF . TRIPLE '<' tipo ID  (161)
	declar_tipo_trip : TYPEDEF . TRIPLE tipo ID  (162)
	declar_tipo_trip : TYPEDEF . '<' tipo '>' ID  (163)
	declar_tipo_trip : TYPEDEF . TRIPLE '<' tipo '>' error ';'  (164)

	TRIPLE  shift 61
	'<'  shift 62
	.  error


state 15
	sentec_declar : TAG .  (20)

	.  reduce 20


state 16
	cuerpo_error : BEGIN sentencias . ';' END  (4)
	cuerpo_error : BEGIN sentencias . ';'  (6)
	sentencias : sentencias . ';' sentencia  (12)
	sentencias : sentencias . sentencia  (15)

	ID  shift 7
	GOTO  shift 8
	FOR  shift 9
	ULONGINT  shift 10
	DOUBLE  shift 11
	IF  shift 12
	OUTF  shift 13
	TYPEDEF  shift 14
	TAG  shift 15
	';'  shift 63
	.  error

	sentencia  goto 64
	sentec_declar  goto 18
	sentec_eject  goto 19
	declaracion_var  goto 20
	declaracion_fun  goto 21
	declar_tipo_trip  goto 22
	asignacion  goto 23
	invoc_fun  goto 24
	seleccion  goto 25
	sald_mensaj  goto 26
	for  goto 27
	goto  goto 28
	tipo  goto 29
	triple  goto 30
	tipo_fun  goto 31


state 17
	cuerpo_error : BEGIN sentencia . END  (5)
	sentencias : sentencia .  (13)

	END  shift 65
	ID  reduce 13
	GOTO  reduce 13
	FOR  reduce 13
	ULONGINT  reduce 13
	DOUBLE  reduce 13
	IF  reduce 13
	OUTF  reduce 13
	TYPEDEF  reduce 13
	TAG  reduce 13
	';'  reduce 13


state 18
	sentencia : sentec_declar .  (16)

	.  reduce 16


state 19
	sentencia : sentec_eject .  (17)

	.  reduce 17


state 20
	sentec_declar : declaracion_var .  (18)

	.  reduce 18


state 21
	sentec_declar : declaracion_fun .  (19)

	.  reduce 19


state 22
	sentec_declar : declar_tipo_trip .  (21)

	.  reduce 21


state 23
	sentec_eject : asignacion .  (22)

	.  reduce 22


state 24
	sentec_eject : invoc_fun .  (23)

	.  reduce 23


state 25
	sentec_eject : seleccion .  (24)

	.  reduce 24


state 26
	sentec_eject : sald_mensaj .  (25)

	.  reduce 25


state 27
	sentec_eject : for .  (26)

	.  reduce 26


state 28
	sentec_eject : goto .  (27)

	.  reduce 27


state 29
	declaracion_var : tipo . lista_variables  (75)
	tipo_fun : tipo .  (116)

	ID  shift 66
	FUN  reduce 116

	lista_variables  goto 67


state 30
	asignacion : triple . ASIGN expresion_matematica  (83)

	ASIGN  shift 68
	.  error


state 31
	declaracion_fun : tipo_fun . FUN ID '(' $$3 lista_parametro ')' $$4 cuerpo_funcion_p  (111)
	declaracion_fun : tipo_fun . FUN '(' lista_parametro ')' $$5 cuerpo_funcion_p  (113)
	declaracion_fun : tipo_fun . FUN ID '(' ')' $$6 cuerpo_funcion_p  (115)

	FUN  shift 69
	.  error


state 32
	cuerpo : BEGIN . sentencias ';' END  (7)
	cuerpo : BEGIN . sentencia END  (8)
	cuerpo : BEGIN . sentencias ';'  (9)

	error  shift 6
	ID  shift 7
	GOTO  shift 8
	FOR  shift 9
	ULONGINT  shift 10
	DOUBLE  shift 11
	IF  shift 12
	OUTF  shift 13
	TYPEDEF  shift 14
	TAG  shift 15
	.  error

	sentencias  goto 70
	sentencia  goto 71
	sentec_declar  goto 18
	sentec_eject  goto 19
	declaracion_var  goto 20
	declaracion_fun  goto 21
	declar_tipo_trip  goto 22
	asignacion  goto 23
	invoc_fun  goto 24
	seleccion  goto 25
	sald_mensaj  goto 26
	for  goto 27
	goto  goto 28
	tipo  goto 29
	triple  goto 30
	tipo_fun  goto 31


state 33
	prog : ID $$1 cuerpo .  (2)

	.  reduce 2


state 34
	cuerpo : sentencias . ';' END  (10)
	cuerpo : sentencias . ';'  (11)
	sentencias : sentencias . ';' sentencia  (12)
	sentencias : sentencias . sentencia  (15)

	ID  shift 7
	GOTO  shift 8
	FOR  shift 9
	ULONGINT  shift 10
	DOUBLE  shift 11
	IF  shift 12
	OUTF  shift 13
	TYPEDEF  shift 14
	TAG  shift 15
	';'  shift 72
	.  error

	sentencia  goto 64
	sentec_declar  goto 18
	sentec_eject  goto 19
	declaracion_var  goto 20
	declaracion_fun  goto 21
	declar_tipo_trip  goto 22
	asignacion  goto 23
	invoc_fun  goto 24
	seleccion  goto 25
	sald_mensaj  goto 26
	for  goto 27
	goto  goto 28
	tipo  goto 29
	triple  goto 30
	tipo_fun  goto 31


state 35
	sentencias : sentencia .  (13)

	.  reduce 13


state 36
	sentencias : error ';' .  (14)

	.  reduce 14


state 37
	asignacion : ID ASIGN . expresion_matematica  (84)

	ID  shift 44
	CTE  shift 45
	'+'  shift 47
	'-'  shift 48
	'*'  shift 49
	'/'  shift 50
	.  error

	invoc_fun  goto 51
	expresion_matematica  goto 73
	triple  goto 56
	termino  goto 57
	factor  goto 58
	constante  goto 59


state 38
	invoc_fun : ID '(' . $$7 lista_parametro_real ')'  (132)
	invoc_fun : ID '(' . ')'  (133)
	$$7 : .  (131)

	')'  shift 74
	ID  reduce 131
	CTE  reduce 131
	ULONGINT  reduce 131
	DOUBLE  reduce 131
	'+'  reduce 131
	'-'  reduce 131
	'*'  reduce 131
	'/'  reduce 131

	$$7  goto 75


state 39
	triple : ID '{' . expresion_matematica '}'  (108)

	ID  shift 44
	CTE  shift 45
	'+'  shift 47
	'-'  shift 48
	'*'  shift 49
	'/'  shift 50
	.  error

	invoc_fun  goto 51
	expresion_matematica  goto 76
	triple  goto 56
	termino  goto 57
	factor  goto 58
	constante  goto 59


state 40
	declaracion_var : ID $$2 . lista_variables  (77)

	ID  shift 66
	.  error

	lista_variables  goto 77


state 41
	goto : GOTO error . ';'  (158)

	';'  shift 78
	.  error


state 42
	goto : GOTO TAG .  (157)

	.  reduce 157


state 43
	for : FOR '(' . asignacion_for ';' condicion_for ';' foravanc CTE ')' cuerpo_iteracion  (143)
	for : FOR '(' . asignacion_for ';' condicion_for foravanc '-' CTE ')' cuerpo_iteracion  (144)
	for : FOR '(' . asignacion_for ';' condicion_for foravanc CTE ')' cuerpo_iteracion  (145)
	for : FOR '(' . asignacion_for condicion_for ';' foravanc CTE ')' cuerpo_iteracion  (146)
	for : FOR '(' . asignacion_for condicion_for foravanc CTE ')' cuerpo_iteracion  (147)
	for : FOR '(' . asignacion_for ';' condicion_for ';' CTE ')' cuerpo_iteracion  (148)
	for : FOR '(' . asignacion_for ';' condicion_for ';' foravanc ')' cuerpo_iteracion  (149)
	for : FOR '(' . asignacion_for ';' condicion_for CTE ')' cuerpo_iteracion  (150)
	for : FOR '(' . asignacion_for ';' condicion_for foravanc ')' cuerpo_iteracion  (151)
	for : FOR '(' . asignacion_for ';' condicion_for ';' ')' cuerpo_iteracion  (152)

	ID  shift 79
	.  error

	asignacion_for  goto 80


state 44
	factor : ID .  (102)
	triple : ID . '{' expresion_matematica '}'  (108)
	invoc_fun : ID . '(' $$7 lista_parametro_real ')'  (132)
	invoc_fun : ID . '(' ')'  (133)

	'('  shift 38
	'{'  shift 39
	error  reduce 102
	ID  reduce 102
	CTE  reduce 102
	MASI  reduce 102
	MENOSI  reduce 102
	DIST  reduce 102
	GOTO  reduce 102
	UP  reduce 102
	DOWN  reduce 102
	FOR  reduce 102
	ULONGINT  reduce 102
	DOUBLE  reduce 102
	IF  reduce 102
	THEN  reduce 102
	END  reduce 102
	OUTF  reduce 102
	TYPEDEF  reduce 102
	RET  reduce 102
	TAG  reduce 102
	';'  reduce 102
	')'  reduce 102
	','  reduce 102
	'='  reduce 102
	'<'  reduce 102
	'>'  reduce 102
	'+'  reduce 102
	'-'  reduce 102
	'*'  reduce 102
	'/'  reduce 102
	'}'  reduce 102


state 45
	constante : CTE .  (106)

	.  reduce 106


state 46
	condicion : '(' . condicion_2 ')'  (28)
	condicion : '(' . condicion_2  (30)
	condicion_2 : '(' . patron_izq ')' comparador '(' patron_der ')'  (33)
	condicion_2 : '(' . patron_izq comparador patron_der ')'  (34)
	condicion_2 : '(' . patron_izq ')' comparador patron_der ')'  (35)
	condicion_2 : '(' . patron_izq comparador '(' patron_der ')'  (36)
	condicion_2 : '(' . patron_izq ')' error '(' patron_der ')'  (37)

	ID  shift 44
	CTE  shift 45
	'('  shift 81
	'+'  shift 47
	'-'  shift 48
	'*'  shift 49
	'/'  shift 50
	.  error

	invoc_fun  goto 51
	condicion_2  goto 82
	expresion_matematica  goto 83
	patron_izq  goto 84
	lista_patron_izq  goto 85
	triple  goto 56
	termino  goto 57
	factor  goto 58
	constante  goto 59


state 47
	expresion_matematica : '+' . termino  (88)

	ID  shift 44
	CTE  shift 45
	'-'  shift 48
	'*'  shift 49
	'/'  shift 50
	.  error

	invoc_fun  goto 51
	triple  goto 56
	termino  goto 86
	factor  goto 58
	constante  goto 59


state 48
	constante : '-' . CTE  (107)

	CTE  shift 87
	.  error


state 49
	termino : '*' . factor  (96)

	ID  shift 44
	CTE  shift 45
	'-'  shift 48
	.  error

	invoc_fun  goto 51
	triple  goto 56
	factor  goto 88
	constante  goto 59


state 50
	termino : '/' . factor  (97)

	ID  shift 44
	CTE  shift 45
	'-'  shift 48
	.  error

	invoc_fun  goto 51
	triple  goto 56
	factor  goto 89
	constante  goto 59


state 51
	factor : invoc_fun .  (104)

	.  reduce 104


state 52
	condicion_punto_control : condicion .  (53)

	.  reduce 53


state 53
	condicion : condicion_2 .  (29)
	condicion : condicion_2 . ')'  (31)

	')'  shift 90
	CTE  reduce 29
	UP  reduce 29
	DOWN  reduce 29
	THEN  reduce 29
	';'  reduce 29


state 54
	condicion_2 : expresion_matematica . comparador expresion_matematica  (32)
	condicion_2 : expresion_matematica . error expresion_matematica  (38)
	expresion_matematica : expresion_matematica . '+' termino  (85)
	expresion_matematica : expresion_matematica . '-' termino  (86)
	expresion_matematica : expresion_matematica . '+' error ')'  (89)
	expresion_matematica : expresion_matematica . '+' error ';'  (90)
	expresion_matematica : expresion_matematica . '-' error ')'  (91)
	expresion_matematica : expresion_matematica . '-' error ';'  (92)

	error  shift 91
	MASI  shift 92
	MENOSI  shift 93
	DIST  shift 94
	'='  shift 95
	'<'  shift 96
	'>'  shift 97
	'+'  shift 98
	'-'  shift 99
	.  error

	comparador  goto 100


state 55
	seleccion : IF condicion_punto_control . THEN cuerpo_control sinelse_punto_control  (45)
	seleccion : IF condicion_punto_control . THEN cuerpo_control else_punto_control cuerpo_control endif_punto_control  (46)
	seleccion : IF condicion_punto_control . THEN cuerpo_control  (47)
	seleccion : IF condicion_punto_control . THEN else_punto_control  (48)
	seleccion : IF condicion_punto_control . THEN sinelse_punto_control  (49)
	seleccion : IF condicion_punto_control . THEN cuerpo_control else_punto_control endif_punto_control  (50)
	seleccion : IF condicion_punto_control . THEN else_punto_control endif_punto_control  (51)

	THEN  shift 101
	.  error


state 56
	factor : triple .  (105)

	.  reduce 105


state 57
	expresion_matematica : termino .  (87)
	termino : termino . '*' factor  (93)
	termino : termino . '/' factor  (94)
	termino : termino . '/' error ')'  (98)
	termino : termino . '*' error ')'  (99)
	termino : termino . '*' error ';'  (100)
	termino : termino . '/' error ';'  (101)

	'*'  shift 102
	'/'  shift 103
	error  reduce 87
	ID  reduce 87
	CTE  reduce 87
	MASI  reduce 87
	MENOSI  reduce 87
	DIST  reduce 87
	GOTO  reduce 87
	UP  reduce 87
	DOWN  reduce 87
	FOR  reduce 87
	ULONGINT  reduce 87
	DOUBLE  reduce 87
	IF  reduce 87
	THEN  reduce 87
	END  reduce 87
	OUTF  reduce 87
	TYPEDEF  reduce 87
	RET  reduce 87
	TAG  reduce 87
	';'  reduce 87
	')'  reduce 87
	','  reduce 87
	'='  reduce 87
	'<'  reduce 87
	'>'  reduce 87
	'+'  reduce 87
	'-'  reduce 87
	'}'  reduce 87


state 58
	termino : factor .  (95)

	.  reduce 95


state 59
	factor : constante .  (103)

	.  reduce 103


state 60
	sald_mensaj : OUTF '(' . mensaje ')'  (138)
	sald_mensaj : OUTF '(' . ')'  (139)
	sald_mensaj : OUTF '(' . error ')'  (140)

	error  shift 104
	ID  shift 44
	CTE  shift 45
	CADMUL  shift 105
	')'  shift 106
	'+'  shift 47
	'-'  shift 48
	'*'  shift 49
	'/'  shift 50
	.  error

	invoc_fun  goto 51
	expresion_matematica  goto 107
	triple  goto 56
	termino  goto 57
	factor  goto 58
	constante  goto 59
	mensaje  goto 108


state 61
	declar_tipo_trip : TYPEDEF TRIPLE . '<' tipo '>' ID  (159)
	declar_tipo_trip : TYPEDEF TRIPLE . tipo '>' ID  (160)
	declar_tipo_trip : TYPEDEF TRIPLE . '<' tipo ID  (161)
	declar_tipo_trip : TYPEDEF TRIPLE . tipo ID  (162)
	declar_tipo_trip : TYPEDEF TRIPLE . '<' tipo '>' error ';'  (164)

	ULONGINT  shift 10
	DOUBLE  shift 11
	'<'  shift 109
	.  error

	tipo  goto 110


state 62
	declar_tipo_trip : TYPEDEF '<' . tipo '>' ID  (163)

	ULONGINT  shift 10
	DOUBLE  shift 11
	.  error

	tipo  goto 111


state 63
	cuerpo_error : BEGIN sentencias ';' . END  (4)
	cuerpo_error : BEGIN sentencias ';' .  (6)
	sentencias : sentencias ';' . sentencia  (12)

	ID  shift 7
	GOTO  shift 8
	FOR  shift 9
	ULONGINT  shift 10
	DOUBLE  shift 11
	IF  shift 12
	END  shift 112
	OUTF  shift 13
	TYPEDEF  shift 14
	TAG  shift 15
	$end  reduce 6

	sentencia  goto 113
	sentec_declar  goto 18
	sentec_eject  goto 19
	declaracion_var  goto 20
	declaracion_fun  goto 21
	declar_tipo_trip  goto 22
	asignacion  goto 23
	invoc_fun  goto 24
	seleccion  goto 25
	sald_mensaj  goto 26
	for  goto 27
	goto  goto 28
	tipo  goto 29
	triple  goto 30
	tipo_fun  goto 31


state 64
	sentencias : sentencias sentencia .  (15)

	.  reduce 15


state 65
	cuerpo_error : BEGIN sentencia END .  (5)

	.  reduce 5


state 66
	lista_variables : ID .  (79)

	.  reduce 79


state 67
	declaracion_var : tipo lista_variables .  (75)
	lista_variables : lista_variables . ',' ID  (78)
	lista_variables : lista_variables . error ID  (80)

	error  shift 114
	','  shift 115
	ID  reduce 75
	GOTO  reduce 75
	FOR  reduce 75
	ULONGINT  reduce 75
	DOUBLE  reduce 75
	IF  reduce 75
	END  reduce 75
	OUTF  reduce 75
	TYPEDEF  reduce 75
	RET  reduce 75
	TAG  reduce 75
	';'  reduce 75


state 68
	asignacion : triple ASIGN . expresion_matematica  (83)

	ID  shift 44
	CTE  shift 45
	'+'  shift 47
	'-'  shift 48
	'*'  shift 49
	'/'  shift 50
	.  error

	invoc_fun  goto 51
	expresion_matematica  goto 116
	triple  goto 56
	termino  goto 57
	factor  goto 58
	constante  goto 59


state 69
	declaracion_fun : tipo_fun FUN . ID '(' $$3 lista_parametro ')' $$4 cuerpo_funcion_p  (111)
	declaracion_fun : tipo_fun FUN . '(' lista_parametro ')' $$5 cuerpo_funcion_p  (113)
	declaracion_fun : tipo_fun FUN . ID '(' ')' $$6 cuerpo_funcion_p  (115)

	ID  shift 117
	'('  shift 118
	.  error


state 70
	cuerpo : BEGIN sentencias . ';' END  (7)
	cuerpo : BEGIN sentencias . ';'  (9)
	sentencias : sentencias . ';' sentencia  (12)
	sentencias : sentencias . sentencia  (15)

	ID  shift 7
	GOTO  shift 8
	FOR  shift 9
	ULONGINT  shift 10
	DOUBLE  shift 11
	IF  shift 12
	OUTF  shift 13
	TYPEDEF  shift 14
	TAG  shift 15
	';'  shift 119
	.  error

	sentencia  goto 64
	sentec_declar  goto 18
	sentec_eject  goto 19
	declaracion_var  goto 20
	declaracion_fun  goto 21
	declar_tipo_trip  goto 22
	asignacion  goto 23
	invoc_fun  goto 24
	seleccion  goto 25
	sald_mensaj  goto 26
	for  goto 27
	goto  goto 28
	tipo  goto 29
	triple  goto 30
	tipo_fun  goto 31


state 71
	cuerpo : BEGIN sentencia . END  (8)
	sentencias : sentencia .  (13)

	END  shift 120
	ID  reduce 13
	GOTO  reduce 13
	FOR  reduce 13
	ULONGINT  reduce 13
	DOUBLE  reduce 13
	IF  reduce 13
	OUTF  reduce 13
	TYPEDEF  reduce 13
	TAG  reduce 13
	';'  reduce 13


state 72
	cuerpo : sentencias ';' . END  (10)
	cuerpo : sentencias ';' .  (11)
	sentencias : sentencias ';' . sentencia  (12)

	ID  shift 7
	GOTO  shift 8
	FOR  shift 9
	ULONGINT  shift 10
	DOUBLE  shift 11
	IF  shift 12
	END  shift 121
	OUTF  shift 13
	TYPEDEF  shift 14
	TAG  shift 15
	$end  reduce 11

	sentencia  goto 113
	sentec_declar  goto 18
	sentec_eject  goto 19
	declaracion_var  goto 20
	declaracion_fun  goto 21
	declar_tipo_trip  goto 22
	asignacion  goto 23
	invoc_fun  goto 24
	seleccion  goto 25
	sald_mensaj  goto 26
	for  goto 27
	goto  goto 28
	tipo  goto 29
	triple  goto 30
	tipo_fun  goto 31


state 73
	asignacion : ID ASIGN expresion_matematica .  (84)
	expresion_matematica : expresion_matematica . '+' termino  (85)
	expresion_matematica : expresion_matematica . '-' termino  (86)
	expresion_matematica : expresion_matematica . '+' error ')'  (89)
	expresion_matematica : expresion_matematica . '+' error ';'  (90)
	expresion_matematica : expresion_matematica . '-' error ')'  (91)
	expresion_matematica : expresion_matematica . '-' error ';'  (92)

	'+'  shift 98
	'-'  shift 99
	ID  reduce 84
	GOTO  reduce 84
	FOR  reduce 84
	ULONGINT  reduce 84
	DOUBLE  reduce 84
	IF  reduce 84
	END  reduce 84
	OUTF  reduce 84
	TYPEDEF  reduce 84
	RET  reduce 84
	TAG  reduce 84
	';'  reduce 84


state 74
	invoc_fun : ID '(' ')' .  (133)

	.  reduce 133


state 75
	invoc_fun : ID '(' $$7 . lista_parametro_real ')'  (132)

	ID  shift 44
	CTE  shift 45
	ULONGINT  shift 10
	DOUBLE  shift 11
	'+'  shift 47
	'-'  shift 48
	'*'  shift 49
	'/'  shift 50
	.  error

	invoc_fun  goto 51
	expresion_matematica  goto 122
	tipo  goto 123
	triple  goto 56
	termino  goto 57
	factor  goto 58
	constante  goto 59
	lista_parametro_real  goto 124
	param_real  goto 125

